# rhythmTrainer

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/rhythmtrainer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  RhythmEngine.cpp  RhythmEngine.h  RhythmEngineJNI.cpp
app/src/main/java/com/example/rhythmtrainer/: LoggingWavetableSynthesizer.kt  MainActivity.kt  ProgressRepository.kt  WavetableSynthesizer.kt  WavetableSynthesizerViewModel.kt
app/src/main/java/com/example/rhythmtrainer/game/: CalibrationManager.kt  GameManager.kt
app/src/main/java/com/example/rhythmtrainer/learning/: LearningData.kt  LearningScreen.kt  LessonDetailScreen.kt  VideoPlayer.kt
app/src/main/java/com/example/rhythmtrainer/model/: LevelInfo.kt
app/src/main/java/com/example/rhythmtrainer/navigation/: NavigationHost.kt  Screen.kt
app/src/main/java/com/example/rhythmtrainer/ranks/: GameResultStorage.kt  Ranks.kt
app/src/main/java/com/example/rhythmtrainer/settings/: SettingsManager.kt  SettingsStorage.kt
app/src/main/java/com/example/rhythmtrainer/ui/components/: AppTopBar.kt
app/src/main/java/com/example/rhythmtrainer/ui/screens/: CalibrationScreen.kt  GameScreen.kt  LevelSelectScreen.kt  MainMenuScreen.kt  ResultDialog.kt  SettingsScreens.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/rhythmtrainer/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+3 files in other folders)
